Wdrożono bezpieczne logowanie administratora przez ciasteczka